fixed spacing issue

--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,7 @@ body {
   height: 100%;
 }
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: hsl(210, 60%, 98%);
-
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -49,12 +45,16 @@ h6 {
 main {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-size: .8rem;
-  color: hsl(219, 14%, 63%);
+  color: hsl(219, 14%, 63%);  
 }
 .layout-container{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: white;
   padding: 1rem;
-  max-width: 750px;
   border-radius: 15px;
 }
 .notifications-bar,
@@ -63,12 +63,11 @@ main {
 }
 .notifications-bar {
   justify-content: space-between;
-  margin-bottom: 20px;
 }
 .notification{
+  margin-top: .5rem;
   align-items: center;
   padding: .5rem;
-  margin-bottom: 12px;
   border-radius: 12px;
 }
 .unread-notification{
